--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <input id="firstClassInput" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p><button onclick="firstClass('first',true)" class="color"><i class="fas fa-plus"></i></button> <button onclick="firstClass('first',false)" class="color"><i class="fas fa-minus"></i></button></p>
+                    <p><button onclick="sitChange('first',true)" class="color"><i class="fas fa-plus"></i></button> <button onclick="sitChange('first',false)" class="color"><i class="fas fa-minus"></i></button></p>
                 </div>
             </div>
                 <div class="input-group f-class">
@@ -80,7 +80,7 @@
                         <input id="economyClassInput" class="inp-style inp-width" type="number" name="" value="0">
                     </div>
                     <div class="plus-minus-btn">
-                        <p><button onclick="firstClass('economy',true)" class="color"><i class="fas fa-plus"></i></button> <button onclick="firstClass('economy',false)" class="color"><i class="fas fa-minus"></i></button></p>
+                        <p><button onclick="sitChange('economy',true)" class="color"><i class="fas fa-plus"></i></button> <button onclick="sitChange('economy',false)" class="color"><i class="fas fa-minus"></i></button></p>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p>$<span id="subTotal">00</span></p>
                     </div>
                 </div>
 
@@ -100,7 +100,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p>$<span id="vat">0</span></p>
                     </div>
                 </div>
                 <hr>
@@ -109,7 +109,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p>$ <span id="total-cost">0</span></p>
                     </div>
                 </div>
             </div>
