--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <!--Booking Section-->
-    <main class="main-content container">
+    <main id="mainSection" class="main-content container">
 
         <div class="booking-content">
             <h1>Mega City Bus</h1>
@@ -113,9 +113,15 @@
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button id="bookNow" class="btn-style">Book Now</button>
         </div>
     </main>
+    <section class="thank-you"  id="thankSection">
+        <h2>Thank you for buying our Ticket</h2>
+        <h3>see you next time</h3>
+        <i class="far fa-smile-wink"></i>
+
+    </section>
     <!-- javascript -->
     <script src="script.js"></script>
     <!--Thank You-->
